[tool.poetry]
name = "driverkit"
version = "0.1.0"
description = "Houses the generics for Selenium WebDriver for MTBL webscraping"
authors = ["Taylor Pubins <tpubz@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
