[tool.poetry]
name = "mtbl-driverkit"
version = "0.4.0"
description = "Houses the generics for Selenium WebDriver for MTBL webscraping"
authors = ["Taylor Pubins <tpubz@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.16"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
coverage = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
